fixed z-indexes

--- a/client/src/styles/_contact.scss
+++ b/client/src/styles/_contact.scss
@@ -26,3 +26,12 @@
     }
   }
 }
+
+@media only screen and (max-width: 991px) {
+  #contact {
+    .background-image {
+      background-attachment: initial;
+      background-repeat: no-repeat;
+    }
+  }
+}
