--- a/client/src/styles/_contactForm.scss
+++ b/client/src/styles/_contactForm.scss
@@ -47,6 +47,7 @@
         width: 100%;
         color: $color-white;
         > div {
+          text-align: center;
           position: absolute;
           top: 50%;
           left: 50%;
