--- a/client/src/styles/_lightbox.scss
+++ b/client/src/styles/_lightbox.scss
@@ -3,6 +3,7 @@
 // Gallery lightbox
 .gallery {
   padding: 50px 0;
+
   h2 {
     text-align: center;
     margin: 0;
@@ -50,7 +51,7 @@
     position: relative;
     display: inline-block;
     height: 100%;
-    z-index: 1;
+    z-index: 0;
     &::after {
       content: '\f002';
       font: {
